tests/core/data/csl/TypeLoaderTests/SyntaxError/struct6.csl
struct struct6
{
	%attribute string;
}
